[package]
name = "plonk-by-hand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
sha3 = "0.10.6"
bincode = "1.3.3"
blake2 = "0.10.4"
